--- a/localisation/thespot_focus_l_english.yml
+++ b/localisation/thespot_focus_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  GER_army:0 "Army Focus"
- GER_arty1:0 "Artillary Development"
- GER_arty2:0 "Artillary Development 2"
- GER_arty3:0 "Artillary Development 3"
+ GER_arty1:0 "Arty Development"
+ GER_arty2:0 "Arty Development 2"
+ GER_arty3:0 "Arty Development 3"
  GER_antiair:0 "Anti Air"
  GER_antiair2:0 "Anti Air 2"
  GER_antiair3:0 "Anti Air 3"
@@ -25,9 +25,9 @@
  GER_mil2:0 "Military Factory 2"
  GER_mil3:0 "Military Factory 3"
  SOV_army:0 "Army Focus"
- SOV_arty1:0 "Artillary Development"
- SOV_arty2:0 "Artillary Development 2"
- SOV_arty3:0 "Artillary Development 3"
+ SOV_arty1:0 "Arty Development"
+ SOV_arty2:0 "Arty Development 2"
+ SOV_arty3:0 "Arty Development 3"
  SOV_antiair:0 "Anti Air"
  SOV_antiair2:0 "Anti Air 2"
  SOV_antiair3:0 "Anti Air 3"
